css/style.css
html {
    font-family: 'Raleway', sans-serif;
    font-size: 16px;
    overflow-y: auto
}

body {
    padding-left: 1rem;
    padding-right: 1rem;
    /* padding: 0; */
    color: #3a3939d9;
    font-family: 'Raleway', sans-serif;
    background-color: #ffed00ad;
}

a {
    -webkit-transition: color 0.2s ease-out;
    -moz-transition: color 0.2s ease-out;
    transition: color 0.2s ease-out;
    color: #0a0f13
}

a:hover {
    color: #020202
}

h1 {
    font-size: 9rem
}

h2 {
    font-size: 3rem;
    font-weight: normal
}

.bg-yellow {
    background-color: #fef051!important;
}

.nav-custom-item{
    margin: 1rem;
    font-size: 3rem;
}

img.portrait {
    border-radius: 50%;
    border: 10px solid #3a3939d9 ;
    margin: 2em 3em;
    width: 300px;
    height: 300px
}

.column {
    flex: 1
}

.main-page-heading{
font-weight: 700;
}

main {
    display: flex;
    margin-top: 5vh
}

main .column.left {
    text-align: end
}

main .column.right h1 {
    margin-left: -10px;
    margin-bottom: 0.4em
}

main .column.right h2 {
    margin-left: -4px;
    margin-top: 0
}

main .column.right .links {
    margin-top: 2.5rem;
    font-size: 1.5rem
}

main .column.right .links a {
    margin-right: 0.5rem;
    text-decoration: none
}

ul {
    list-style-type: none;
    margin: 10px;
    padding: 0;
}

@media screen and (max-width: 980px) {
    main {
        display: block;
        margin-top: 0
    }
    main .column.left {
        text-align: center
    }
    main .column.right h1 {
        margin-top: 0
    }
    .nav-custom-item {
        margin: .1rem;
        font-size: 2rem;
    }
}

footer {
    display: flex;
    margin-top: 3rem;
    font-size: 0.75rem
}

.blog-title {
    height: 20px;
    font-weight: 600;
    font-size: 21px;
}

.blog-desc {
    height: 60px;
    font-size: 14px;
}

.blog-img {
    height: 300px;
    width: 100%;
}

@media screen and (max-width: 980px) {
    footer {
        display: block
    }
}

